<resources>
    <string name="app_name">Restaurant App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="restaurant_app">Restaurant App</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="sign_in">Sign in</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My cart</string>
    <string name="eat_fir_repeat">Eat Fir Repeat</string>
    <string name="paneer_pizza">Paneer Pizza</string>
    <string name="chicken_pizza">Chicken Pizza</string>
</resources>