<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_vector"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/daily_meal"
            android:icon="@drawable/daily_vector"
            android:title="Special Meals" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/fav_vactor"
            android:title="@string/favourite" />
        <item
            android:id="@+id/cart"
            android:icon="@drawable/cart_vector"
            android:title="@string/my_cart" />
    </group>
</menu>